--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -1,9 +1,9 @@
 --- 
 layout: bootstrap 
-title : Portfolio 
+title : Release.log 
 permalink: /portfolio/
 subtitle: "Projects I am working on" 
-feature-img: "assets/img/pexels/computer.jpeg"
+feature-img: "assets/img/pexels/desk-top.jpeg"
 hide: true
 ---
 
